--- a/public/ar.html
+++ b/public/ar.html
@@ -65,11 +65,11 @@
 	</style>
 </head>
 <body>
-	<div id="ar-info">
-		<h2 id="status-title">⏳ カメラ起動準備中...</h2>
-		<p id="status-message">カメラへのアクセス許可をお願いします</p>
-		<p style="font-size: 0.8em; color: #4bffde;" id="status-detail"></p>
-	</div>
+<!--	<div id="ar-info">-->
+<!--		<h2 id="status-title">⏳ カメラ起動準備中...</h2>-->
+<!--		<p id="status-message">カメラへのアクセス許可をお願いします</p>-->
+<!--		<p style="font-size: 0.8em; color: #4bffde;" id="status-detail"></p>-->
+<!--	</div>-->
 
 	<button id="back-button" onclick="window.location.href='/'">戻る</button>
 
