refactor(ar): 3Dモデルのサイズとアニメーションを変更

--- a/public/ar.html
+++ b/public/ar.html
@@ -98,12 +98,13 @@
 			<!-- ポイントライト (マーカーの上から) -->
 			<a-light type="point" color="#ffffff" intensity="1.5" position="0 2 0"></a-light>
 
-			<!-- 3Dモデル (GLB) - かなり小さく表示 -->
+			<!-- 3Dモデル (GLB) - 柴犬を大きく表示して走らせる -->
 			<a-entity
 				position="0 0 0"
 				rotation="-90 0 0"
-				scale="0.1 0.1 0.1"
+				scale="0.3 0.3 0.3"
 				gltf-model="/model.glb"
+				animation="property: position; from: -1 0 0; to: 1 0 0; dur: 2000; easing: linear; loop: true; dir: alternate"
 			></a-entity>
 
 			<!-- テキスト表示 -->
@@ -112,7 +113,7 @@
 				position="0 0.3 0"
 				align="center"
 				color="#24E08E"
-				width="2"
+				width="4"
 				font="https://cdn.aframe.io/fonts/Roboto-msdf.json"
 			></a-text>
 		</a-marker>
