--- a/public/ar.html
+++ b/public/ar.html
@@ -107,10 +107,11 @@
 				animation="property: position; from: -1 0 0; to: 1 0 0; dur: 2000; easing: linear; loop: true; dir: alternate"
 			></a-entity>
 
-			<!-- テキスト表示 -->
+			<!-- テキスト表示 (マーカーに対して垂直に立てる) -->
 			<a-text
 				value="tubone24"
 				position="0 0.3 0"
+				rotation="0 0 0"
 				align="center"
 				color="#24E08E"
 				width="4"
