refactor(ar): 3Dモデルのスケールを変更

--- a/public/ar.html
+++ b/public/ar.html
@@ -123,7 +123,7 @@
 				align="center"
 				color="#24E08E"
 				width="6"
-				font="https://cdn.aframe.io/fonts/Roboto-msdf.json"
+				font="https://cdn.aframe.io/fonts/Exo2Bold-msdf.json"
 			></a-text>
 		</a-marker>
 	</a-scene>
