refactor(ar): 3Dモデルのスケールを変更

--- a/public/ar.html
+++ b/public/ar.html
@@ -108,9 +108,9 @@
 
 			<!-- 柴犬モデル (手前で左右に走る) -->
 			<a-entity
-				position="0 -0.5 0.5"
+				position="0 -0.8 0.5"
 				rotation="-40 0 0"
-				scale="1 1 1"
+				scale="0.5 0.5 0.5"
 				gltf-model="/shiba-model.glb"
 				animation="property: position; from: -2 0 0.5; to: 2 0 0.5; dur: 3000; easing: linear; loop: true; dir: alternate"
 			></a-entity>
@@ -123,7 +123,7 @@
 				align="center"
 				color="#24E08E"
 				width="6"
-				font="https://cdn.aframe.io/fonts/Exo2Bold-msdf.json"
+				font="/Condiment-Regular-msdf.json"
 			></a-text>
 		</a-marker>
 	</a-scene>
