--- a/public/ar.html
+++ b/public/ar.html
@@ -112,11 +112,11 @@
 				rotation="-40 90 0"
 				scale="0.5 0.5 0.5"
 				gltf-model="/shiba-model.glb"
-				animation__move="property: position; from: -2 -0.8 0.5; to: 2 -0.8 0.5; dur: 3000; easing: easeInOutQuad; loop: true; dir: alternate"
-				animation__turn="property: rotation; from: -40 90 0; to: -40 -90 0; dur: 3000; loop: true; dir: alternate"
+				animation__move="property: position; from: -1.8 -0.8 0.5; to: 1.8 -0.8 0.5; dur: 5000; easing: easeInOutQuad; loop: true; dir: alternate"
+				animation__turn="property: rotation; from: -40 90 0; to: -40 -90 0; dur: 5000; loop: true; dir: alternate"
 			></a-entity>
 
-			<!-- テキスト表示 (上に配置) -->
+			<!-- テキスト表示 (上に配置) - 浮遊&拡大縮小アニメーション -->
 			<a-text
 				value="tubone24"
 				position="0 1.5 0"
@@ -125,6 +125,10 @@
 				color="#24E08E"
 				width="6"
 				font="/Condiment-Regular-msdf.json"
+				shader="msdf"
+				negate="false"
+				animation__float="property: position; from: 0 1.3 0; to: 0 1.7 0; dur: 3000; easing: easeInOutQuad; loop: true; dir: alternate"
+				animation__scale="property: scale; from: 0.9 0.9 0.9; to: 1.1 1.1 1.1; dur: 2000; easing: easeInOutQuad; loop: true; dir: alternate"
 			></a-text>
 		</a-marker>
 	</a-scene>
