--- a/public/ar.html
+++ b/public/ar.html
@@ -118,15 +118,45 @@
 
 			<!-- MacBookモデル (奥で左右にスライド) -->
 			<a-entity
-				position="1.8 -0.5 -0.5"
+				position="1.8 -0.3 -0.3"
 				rotation="-40 -90 0"
-				scale="0.3 0.3 0.3"
+				scale="0.5 0.5 0.5"
 				gltf-model="/macbook-laptop.glb"
-				animation__move="property: position; from: 1.8 -0.5 -0.5; to: -1.8 -0.5 -0.5; dur: 6000; easing: easeInOutQuad; loop: true; dir: alternate"
+				animation__move="property: position; from: 1.8 -0.3 -0.3; to: -1.8 -0.3 -0.3; dur: 6000; easing: easeInOutQuad; loop: true; dir: alternate"
 				animation__turn="property: rotation; from: -40 -90 0; to: -40 90 0; dur: 6000; loop: true; dir: alternate"
 			></a-entity>
 
 			<!-- テキスト表示 (上に配置) - 浮遊&拡大縮小アニメーション -->
+			<!-- 影レイヤー (黒) -->
+			<a-text
+				value="tubone24"
+				position="0.02 1.48 -0.02"
+				rotation="0 0 0"
+				align="center"
+				color="#000000"
+				opacity="0.6"
+				width="6"
+				font="/Condiment-Regular-msdf.json"
+				shader="msdf"
+				negate="false"
+				animation__float="property: position; from: 0.02 1.28 -0.02; to: 0.02 1.68 -0.02; dur: 3000; easing: easeInOutQuad; loop: true; dir: alternate"
+				animation__scale="property: scale; from: 0.9 0.9 0.9; to: 1.1 1.1 1.1; dur: 2000; easing: easeInOutQuad; loop: true; dir: alternate"
+			></a-text>
+			<!-- アウトライン (暗い緑) -->
+			<a-text
+				value="tubone24"
+				position="0.01 1.49 -0.01"
+				rotation="0 0 0"
+				align="center"
+				color="#1a7050"
+				width="6"
+				font="/Condiment-Regular-msdf.json"
+				shader="msdf"
+				negate="false"
+				animation__float="property: position; from: 0.01 1.29 -0.01; to: 0.01 1.69 -0.01; dur: 3000; easing: easeInOutQuad; loop: true; dir: alternate"
+				animation__scale="property: scale; from: 0.9 0.9 0.9; to: 1.1 1.1 1.1; dur: 2000; easing: easeInOutQuad; loop: true; dir: alternate"
+			></a-text>
+			<!-- メインテキスト (明るい緑) -->
 			<a-text
 				value="tubone24"
 				position="0 1.5 0"
