--- a/public/ar.html
+++ b/public/ar.html
@@ -116,14 +116,14 @@
 				animation__turn="property: rotation; from: -40 90 0; to: -40 -90 0; dur: 5000; loop: true; dir: alternate"
 			></a-entity>
 
-			<!-- MacBookモデル (柴犬と同じ高さで左右にスライド) -->
+			<!-- MacBookモデル (控えめに左右にスライド) -->
 			<a-entity
-				position="1.8 -0.8 0.5"
-				rotation="-40 -90 0"
-				scale="0.5 0.5 0.5"
+				position="0.8 -0.7 0"
+				rotation="-40 90 0"
+				scale="0.35 0.35 0.35"
 				gltf-model="/macbook-laptop.glb"
-				animation__move="property: position; from: 1.8 -0.8 0.5; to: -1.8 -0.8 0.5; dur: 7000; easing: easeInOutQuad; loop: true; dir: alternate"
-				animation__turn="property: rotation; from: -40 -90 0; to: -40 90 0; dur: 7000; loop: true; dir: alternate"
+				animation__move="property: position; from: -0.8 -0.7 0; to: 0.8 -0.7 0; dur: 8000; easing: easeInOutQuad; loop: true; dir: alternate"
+				animation__turn="property: rotation; from: -40 90 0; to: -40 -90 0; dur: 8000; loop: true; dir: alternate"
 			></a-entity>
 
 			<!-- テキスト表示 (上に配置) - 浮遊&拡大縮小アニメーション -->
